{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 46,
  "lineage": "eddbaf17-b417-9616-7d87-9a2656d290a4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/backend-pool",
                "ip_addresses": [],
                "name": "backend-pool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/frontend-pool",
                "ip_addresses": [],
                "name": "frontend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendHttpSettingsCollection/backend-http-settings",
                "name": "backend-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 8080,
                "probe_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/probes/backend-probe",
                "probe_name": "backend-probe",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendHttpSettingsCollection/frontend-http-settings",
                "name": "frontend-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/devops-proj2-shouq-waf-policy",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/frontendIPConfigurations/public",
                "name": "public",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/publicIPAddresses/devops-proj2-shouq-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/frontendPorts/port-80",
                "name": "port-80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/gatewayIPConfigurations/appgw-ipcfg",
                "name": "appgw-ipcfg",
                "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/frontendIPConfigurations/public",
                "frontend_ip_configuration_name": "public",
                "frontend_port_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/frontendPorts/port-80",
                "frontend_port_name": "port-80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/httpListeners/listener-80",
                "name": "listener-80",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw",
            "identity": [],
            "location": "southcentralus",
            "name": "devops-proj2-shouq-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "localhost",
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/probes/backend-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "backend-probe",
                "path": "/api/health",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/httpListeners/listener-80",
                "http_listener_name": "listener-80",
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/requestRoutingRules/rule-path",
                "name": "rule-path",
                "priority": 110,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/urlPathMaps/pathmap01",
                "url_path_map_name": "pathmap01"
              }
            ],
            "resource_group_name": "devops-proj2-shouq-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/frontend-pool",
                "default_backend_address_pool_name": "frontend-pool",
                "default_backend_http_settings_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendHttpSettingsCollection/frontend-http-settings",
                "default_backend_http_settings_name": "frontend-http-settings",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/urlPathMaps/pathmap01",
                "name": "pathmap01",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/backend-pool",
                    "backend_address_pool_name": "backend-pool",
                    "backend_http_settings_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendHttpSettingsCollection/backend-http-settings",
                    "backend_http_settings_name": "backend-http-settings",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/urlPathMaps/pathmap01/pathRules/api",
                    "name": "api",
                    "paths": [
                      "/api/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-proj2-shouq-appgw",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_public_ip.appgw_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet",
            "azurerm_web_application_firewall_policy.wafpolicy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkInterfaces/devops-proj2-shouq-nic-backend",
            "internal_domain_name_suffix": "nutdw5f0m15uragemunf0qifef.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.30.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-backend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southcentralus",
            "mac_address": "00-22-48-AA-F5-78",
            "name": "devops-proj2-shouq-nic-backend",
            "private_ip_address": "10.30.2.4",
            "private_ip_addresses": [
              "10.30.2.4"
            ],
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_machine_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Compute/virtualMachines/devops-proj2-shouq-vm-backend"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-proj2-shouq-nic-backend",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkInterfaces/devops-proj2-shouq-nic-frontend",
            "internal_domain_name_suffix": "nutdw5f0m15uragemunf0qifef.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.30.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-frontend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southcentralus",
            "mac_address": "00-22-48-AA-FD-2C",
            "name": "devops-proj2-shouq-nic-frontend",
            "private_ip_address": "10.30.1.4",
            "private_ip_addresses": [
              "10.30.1.4"
            ],
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_machine_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Compute/virtualMachines/devops-proj2-shouq-vm-frontend"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-proj2-shouq-nic-frontend",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkInterfaces/devops-proj2-shouq-nic-mgmt",
            "internal_domain_name_suffix": "nutdw5f0m15uragemunf0qifef.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.30.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-mgmt"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southcentralus",
            "mac_address": "00-0D-3A-F1-F4-F4",
            "name": "devops-proj2-shouq-nic-mgmt",
            "private_ip_address": "10.30.10.4",
            "private_ip_addresses": [
              "10.30.10.4"
            ],
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_machine_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Compute/virtualMachines/devops-proj2-shouq-vm-mgmt"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-proj2-shouq-nic-mgmt",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "backend_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/backend-pool",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkInterfaces/devops-proj2-shouq-nic-backend/ipConfigurations/ipconfig1|/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/backend-pool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkInterfaces/devops-proj2-shouq-nic-backend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_application_gateway.appgw",
            "azurerm_network_interface.nic_backend",
            "azurerm_public_ip.appgw_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet",
            "azurerm_web_application_firewall_policy.wafpolicy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "frontend_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/frontend-pool",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkInterfaces/devops-proj2-shouq-nic-frontend/ipConfigurations/ipconfig1|/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/applicationGateways/devops-proj2-shouq-appgw/backendAddressPools/frontend-pool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkInterfaces/devops-proj2-shouq-nic-frontend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_application_gateway.appgw",
            "azurerm_network_interface.nic_frontend",
            "azurerm_public_ip.appgw_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet",
            "azurerm_web_application_firewall_policy.wafpolicy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-backend-shouq",
            "location": "southcentralus",
            "name": "nsg-backend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_mgmt_ssh_backend",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "10.30.10.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_appgw_to_backend_api",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.30.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-backend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-data-shouq",
            "location": "southcentralus",
            "name": "nsg-data-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_backend_to_sql",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "10.30.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-data-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend-shouq",
            "location": "southcentralus",
            "name": "nsg-frontend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow_appgw_to_frontend_http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.30.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_mgmt_ssh_frontend",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "10.30.10.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-frontend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-mgmt-shouq",
            "location": "southcentralus",
            "name": "nsg-mgmt-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-mgmt-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_appgw_to_backend_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-backend-shouq/securityRules/allow_appgw_to_backend_api",
            "name": "allow_appgw_to_backend_api",
            "network_security_group_name": "nsg-backend-shouq",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devops-proj2-shouq-rg",
            "source_address_prefix": "10.30.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow_appgw_to_backend_api",
            "network_security_group_name": "nsg-backend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_backend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_appgw_to_frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend-shouq/securityRules/allow_appgw_to_frontend_http",
            "name": "allow_appgw_to_frontend_http",
            "network_security_group_name": "nsg-frontend-shouq",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-proj2-shouq-rg",
            "source_address_prefix": "10.30.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow_appgw_to_frontend_http",
            "network_security_group_name": "nsg-frontend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_frontend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_backend_to_sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-data-shouq/securityRules/allow_backend_to_sql",
            "name": "allow_backend_to_sql",
            "network_security_group_name": "nsg-data-shouq",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "devops-proj2-shouq-rg",
            "source_address_prefix": "10.30.2.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow_backend_to_sql",
            "network_security_group_name": "nsg-data-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_data",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_mgmt_ssh_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-backend-shouq/securityRules/allow_mgmt_ssh_backend",
            "name": "allow_mgmt_ssh_backend",
            "network_security_group_name": "nsg-backend-shouq",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "devops-proj2-shouq-rg",
            "source_address_prefix": "10.30.10.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow_mgmt_ssh_backend",
            "network_security_group_name": "nsg-backend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_backend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_mgmt_ssh_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend-shouq/securityRules/allow_mgmt_ssh_frontend",
            "name": "allow_mgmt_ssh_frontend",
            "network_security_group_name": "nsg-frontend-shouq",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "devops-proj2-shouq-rg",
            "source_address_prefix": "10.30.10.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow_mgmt_ssh_frontend",
            "network_security_group_name": "nsg-frontend-shouq",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_frontend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/publicIPAddresses/devops-proj2-shouq-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.225.212.138",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "devops-proj2-shouq-appgw-pip",
            "resource_group_name": "devops-proj2-shouq-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/publicIPAddresses/devops-proj2-shouq-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.188.64.200",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "devops-proj2-shouq-bastion-pip",
            "resource_group_name": "devops-proj2-shouq-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-appgw",
            "name": "snet-appgw",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-appgw",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-backend",
            "name": "snet-backend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-backend",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "bastion",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.100.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "data",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-data",
            "name": "snet-data",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-data",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-frontend",
            "name": "snet-frontend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-frontend",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-mgmt",
            "name": "snet-mgmt",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-proj2-shouq-rg",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-mgmt",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41",
            "virtual_network_name": "devops-proj2-shouq-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-backend",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-backend-shouq",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-backend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_backend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-data",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-data-shouq",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-data"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_data",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-frontend",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend-shouq",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-frontend"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_frontend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-mgmt",
            "network_security_group_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-mgmt-shouq",
            "subnet_id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-mgmt"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_mgmt",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7c3b266d-66ba-48ff-80c4-651a5d410525",
            "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet",
            "location": "southcentralus",
            "name": "devops-proj2-shouq-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.30.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-appgw",
                "name": "snet-appgw",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.30.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-frontend",
                "name": "snet-frontend",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-frontend-shouq"
              },
              {
                "address_prefixes": [
                  "10.30.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-mgmt",
                "name": "snet-mgmt",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-mgmt-shouq"
              },
              {
                "address_prefixes": [
                  "10.30.100.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.30.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-backend",
                "name": "snet-backend",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-backend-shouq"
              },
              {
                "address_prefixes": [
                  "10.30.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/virtualNetworks/devops-proj2-shouq-vnet/subnets/snet-data",
                "name": "snet-data",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/80646857-9142-494b-90c5-32fea6acbc41/resourceGroups/devops-proj2-shouq-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-data-shouq"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-proj2-shouq-vnet",
            "resource_group_name": "devops-proj2-shouq-rg",
            "subscription_id": "80646857-9142-494b-90c5-32fea6acbc41"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}